# issue-reports

./: .envrc  .geminiignore  GEMINI.md  README.md
_shared/: README.md
_shared/bazel-template/: .gitignore  BUILD  MODULE.bazel  REPO.bazel
_shared/bazel-template/requirements/: BUILD  requirements.txt
_shared/docs/: conventions.md  setup.md
bazelbuild/make-variables/: MODULE.bazel  README.md  multitool.lock.json
bazelbuild/make-variables/testapp/: BUILD  echo.sh
rules_image/minimal_lazy/: .bazelrc  README.md  WORKSPACE.bazel  push_rules.bzl
rules_img/minimal_lazy/: .bazelrc  BUILD.bazel  README.md  bazel  push_rules.bzl
rules_python/: GEMINI.md
rules_python/import_tensorflow/: BUILD  MODULE.bazel  README.md  __main__.py
rules_python/import_tensorflow/requirements/: requirements.in  requirements.txt
rules_python/import_torch/: .bazelrc  BUILD.bazel  MODULE.bazel  README.md  test.py
rules_python/missing_so/: .bazelrc  BUILD  MODULE.bazel  README.md  __main__.py
rules_python/rules_pkg_pyvenv/: MODULE.bazel  README.md  defs.bzl
rules_python/rules_pkg_pyvenv/example/: BUILD  __main__.py  app_tar_test.sh  test_app_tar.sh
rules_python/rules_pkg_pyvenv/example/requirements/: requirements.in  requirements.txt
rules_python/rules_pkg_pyvenv/private/: BUILD  tar_runfiles.bzl  tar_runfiles.py
rules_python/strange_venv/: .gitignore  MODULE.bazel  Makefile  README.md  REPO.bazel
rules_python/strange_venv/experiment/: BUILD  analyze.bzl
rules_python/strange_venv/rules_dummy/: .bazelrc  MODULE.bazel
rules_python/strange_venv/rules_dummy/requirements/: BUILD  requirements.in  requirements.txt
rules_python/strange_venv/rules_dummy/tool/: BUILD  __main__.py
rules_python/subprocess_call/: BUILD.bazel  MODULE.bazel  README.md  bazel  requirements.txt  test.py
rules_python/using_uv/: MODULE.bazel  __main__.py  python
rules_python/using_uv/mattress/: command.py
rules_python/using_uv/requirements/: BUILD
rules_python/venv_tar/: .bazelrc  BUILD.bazel  MODULE.bazel  README.md  requirements.txt  write_runfiles.bzl
rules_python/vscode_debugger/: .gitignore  BUILD  MODULE.bazel  README.md  __main__.py  bazel  sitecustomize.py
rules_python/vscode_debugger/bazel_debugpy/: README.md  pyproject.toml
rules_python/vscode_debugger/bazel_debugpy/src/: _bazel_debugpy.pth
rules_python/vscode_debugger/bazel_debugpy/src/bazel_debugpy/: _shared.py  connect.py  launch.py
rules_python/vscode_debugger/debugpy/: BUILD  sitecustomize.py
rules_python/vscode_debugger/example/: .bazelrc  BUILD  MODULE.bazel  README.md  __main__.py
rules_python/vscode_debugger/example/mattress/: command.py
rules_python/vscode_debugger/example/requirements/: requirements.in  requirements.txt
rules_python/vscode_debugger/mattress/: BUILD  __init__.py  command.py
rules_python/vscode_debugger/requirements/: BUILD  requirements.in
rules_python/vscode_debugger/vscode/: launch.py
rules_python/vscode_debugger_v2/: .gitignore  MODULE.bazel  README.md
