"""Site-packages example."""

bazel_dep(name = "rules_python", version = "1.7.0")
bazel_dep(name = "rules_uv", version = "0.88.0")
bazel_dep(name = "platforms", version = "0.0.11")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    is_default = True,
    python_version = "3.13",
)

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "pypi",
    python_version = "3.13",
    requirements_lock = "requirements.txt",
    enable_implicit_namespace_pkgs = True,
)

use_repo(pip, "pypi")
