load("@rules_python//python:defs.bzl", "py_binary")
load("@rules_uv//uv:pip.bzl", "pip_compile")
load(":write_runfiles.bzl", "write_runfiles")

py_binary(
    name = "test",
    srcs = ["test.py"],
    deps = [
        "@pypi//torch",
    ],
)

pip_compile(
    name = "requirements",
    requirements_in = "//:requirements.in", 
    requirements_txt = "//:requirements.txt", 
)

write_runfiles(
    name = "runfiles",
    py_binary = ":test",
)