"""Site-packages example."""

bazel_dep(name = "rules_python", version = "1.7.0")
bazel_dep(name = "rules_uv", version = "0.88.0")
bazel_dep(name = "platforms", version = "0.0.11")

PYTHON_VERSION = "3.13"

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    is_default = True,
    python_version = PYTHON_VERSION,
)

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    experimental_index_url = "https://pypi.org/simple",
    hub_name = "pypi",
    python_version = PYTHON_VERSION,
    requirements_lock = "requirements.txt",
    enable_implicit_namespace_pkgs = True,
)

use_repo(pip, "pypi")
