"""Site-packages example."""

bazel_dep(name = "rules_python", version = "1.7.0")
bazel_dep(name = "rules_uv", version = "0.88.0")
bazel_dep(name = "platforms", version = "0.0.11")

PYTHON_VERSION = "3.13"

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    is_default = True,
    python_version = PYTHON_VERSION,
)

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    experimental_index_url = "https://pypi.org/simple",
    hub_name = "pypi",
    python_version = PYTHON_VERSION,
    requirements_lock = "requirements.txt",
    enable_implicit_namespace_pkgs = True,
)

use_repo(pip, "pypi")

# With this change I do get the same runfiles tree, but with File.is_symlink = true
# https://github.com/bazel-contrib/rules_python/pull/3440/
# git_override(
#     module_name = "rules_python",
#     remote = "https://github.com/shayanhoshyari/rules_python.git",
#     commit = "ff56c1dd51e742fceb8fda3de08446a031d3ed50",
# )

# Experimenting
# local_path_override(
#     module_name = "rules_python",
#     path = "/Users/hoshyari/code/rules_python",
# )

