module(name="vscode_debugger")

bazel_dep(name = "rules_uv", version = "0.89.2")
bazel_dep(name = "rules_python", version = "1.8.0-rc0")
# commit with --debugger flag.
git_override(module_name = "rules_python", remote = "https://github.com/bazelbuild/rules_python.git", commit = "a94bd0fdde426bf30efed7c819422d74b404cc18")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    python_version = "3.13",
)

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    experimental_index_url = "https://pypi.org/simple",
    hub_name = "pip",
    python_version = "3.13",
    requirements_lock = "//requirements:requirements.txt",
    enable_implicit_namespace_pkgs = True,
)
use_repo(pip, "pip")
